@@ -1,0 +1,10 @@
+{% extends "base.html" %}
+
+{% block title %}
+  Not Found | {{ block.super }}
+{% endblock %}
+
+{% block content %}
+  <h2>Not Found</h2>
+  <p>Oops!  That page can't be found.  Error 404.</p>
+{% endblock %}
