@@ -1,0 +1,10 @@
+{% extends "base.html" %}
+
+{% block title %}
+  Server error | {{ block.super }}
+{% endblock %}
+
+{% block content %}
+  <h2>Server Error</h2>
+  <p>Oops!  Error 500: something is broken....</p>
+{% endblock %}
