@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}ElectionAudits Audit Rpeort for {{ object }}{% endblock %}
+{% block title %}Audit Report for {{ object }} | {{ block.super }}{% endblock %}
 
 {% block content %}
     <h2>Audit Report for {{ object }}</h2>
