@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}ElectionAudits Contest List{% endblock %}
+{% block title %}Contest List | {{ block.super }}{% endblock %}
 {% block content %}
     <h2>Contest List</h2>
 
